#---- Coverage
add_executable(Coverage src/Coverage.cpp)
set_property(TARGET Coverage PROPERTY CXX_STANDARD 14)
target_link_libraries(Coverage osmscout)
install(TARGETS Coverage RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- DumpOSS
if(${OSMSCOUT_BUILD_MAP})
	add_executable(DumpOSS src/DumpOSS.cpp)
	set_property(TARGET DumpOSS PROPERTY CXX_STANDARD 14)
    target_link_libraries(DumpOSS osmscout osmscout-map)
	install(TARGETS DumpOSS RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip DumpOSS demo libosmscout-map, is missing.")
endif()

#---- LocationDescription
add_executable(LocationDescription src/LocationDescription.cpp)
set_property(TARGET LocationDescription PROPERTY CXX_STANDARD 14)
target_link_libraries(LocationDescription osmscout)
install(TARGETS LocationDescription RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- LocationLookup
add_executable(LocationLookup src/LocationLookup.cpp)
set_property(TARGET LocationLookup PROPERTY CXX_STANDARD 14)
target_link_libraries(LocationLookup osmscout)
install(TARGETS LocationLookup RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- LocationLookupForm
add_executable(LocationLookupForm src/LocationLookupForm.cpp)
set_property(TARGET LocationLookupForm PROPERTY CXX_STANDARD 14)
target_link_libraries(LocationLookupForm osmscout)
install(TARGETS LocationLookupForm RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- POILookupForm
add_executable(POILookupForm src/POILookupForm.cpp)
set_property(TARGET POILookupForm PROPERTY CXX_STANDARD 14)
target_link_libraries(POILookupForm osmscout)
install(TARGETS POILookupForm RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- LookupPOI
add_executable(LookupPOI src/LookupPOI.cpp)
set_property(TARGET LookupPOI PROPERTY CXX_STANDARD 14)
target_link_libraries(LookupPOI osmscout)
install(TARGETS LookupPOI RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- LookupText
if(MARISA_FOUND)
    add_executable(LookupText src/LookupText.cpp)
    set_property(TARGET LookupText PROPERTY CXX_STANDARD 14)
    target_link_libraries(LookupText osmscout)
    install(TARGETS LookupText RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip LookupText demo, marisa dependency is missing.")
endif()

#---- PerformanceTest
if(${OSMSCOUT_BUILD_MAP})
	add_executable(PerformanceTest src/PerformanceTest.cpp)
	set_property(TARGET PerformanceTest PROPERTY CXX_STANDARD 14)
	target_include_directories(PerformanceTest PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include/PerformanceTest)
    target_link_libraries(PerformanceTest osmscout osmscout-map)
	if(${OSMSCOUT_BUILD_MAP_CAIRO})
      target_link_libraries(PerformanceTest osmscout-map-cairo)
      set(HAVE_LIB_OSMSCOUTMAPCAIRO 1)
	endif()
	if(${OSMSCOUT_BUILD_MAP_QT})
      target_link_libraries(PerformanceTest osmscout-map-qt Qt5::Widgets)
      set(HAVE_LIB_OSMSCOUTMAPQT 1)
	endif()
    if(${OSMSCOUT_BUILD_MAP_AGG})
      target_link_libraries(PerformanceTest osmscout-map-agg)
      set(HAVE_LIB_OSMSCOUTMAPAGG 1)
	endif()
    if(${OSMSCOUT_BUILD_MAP_OPENGL} AND ${GLFW_FOUND})
      target_link_libraries(PerformanceTest osmscout-map-opengl ${GLFW_LIBRARIES})
      set(HAVE_LIB_OSMSCOUTMAPOPENGL 1)
	endif()
  if(${GPERFTOOLS_USAGE})
    target_include_directories(PerformanceTest PRIVATE ${GPERFTOOLS_INCLUDE_DIRS})
    target_link_libraries(PerformanceTest ${GPERFTOOLS_LIBRARIES})
  endif()
	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/PerformanceTestConfig.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/include/PerformanceTest/config.h)
	install(TARGETS PerformanceTest RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip PerformanceTest demo, libosmscout-map is missing.")
endif()

#---- ResourceConsumption
if(${OSMSCOUT_BUILD_MAP})
	add_executable(ResourceConsumption src/ResourceConsumption.cpp)
	set_property(TARGET ResourceConsumption PROPERTY CXX_STANDARD 14)
    target_link_libraries(ResourceConsumption osmscout osmscout-map)
	install(TARGETS ResourceConsumption RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip ResourceConsumption demo, libosmscout-map is missing.")
endif()

#---- ReverseLocationLookup
add_executable(ReverseLocationLookup src/ReverseLocationLookup.cpp)
set_property(TARGET ReverseLocationLookup PROPERTY CXX_STANDARD 14)
target_link_libraries(ReverseLocationLookup osmscout)
install(TARGETS ReverseLocationLookup RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- Routing
add_executable(Routing src/Routing.cpp)
set_property(TARGET Routing PROPERTY CXX_STANDARD 14)
target_link_libraries(Routing osmscout)
install(TARGETS Routing RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

if(${OSMSCOUT_BUILD_MAP_QT})
  #---- RoutingAnimation
  add_executable(RoutingAnimation src/RoutingAnimation.cpp)
  set_property(TARGET RoutingAnimation PROPERTY CXX_STANDARD 14)
  target_link_libraries(RoutingAnimation osmscout osmscout-map osmscout-map-qt Qt5::Widgets)
  install(TARGETS RoutingAnimation RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
endif()

#----
if(${OSMSCOUT_BUILD_MAP_AGG})
    add_executable(Tiler src/Tiler.cpp)
    set_property(TARGET Tiler PROPERTY CXX_STANDARD 14)
    target_link_libraries(Tiler osmscout osmscout-map osmscout-map-agg)
    if(LIBAGGFT2_LIBRARIES)
        target_link_libraries(Tiler ${LIBAGGFT2_LIBRARIES})
    endif()
    install(TARGETS Tiler RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

    add_executable(DrawMapAgg src/DrawMapAgg.cpp)
    set_property(TARGET DrawMapAgg PROPERTY CXX_STANDARD 14)
    target_link_libraries(DrawMapAgg osmscout osmscout-map osmscout-map-agg)
    if(LIBAGGFT2_LIBRARIES)
        target_link_libraries(DrawMapAgg ${LIBAGGFT2_LIBRARIES})
    endif()
    install(TARGETS DrawMapAgg RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip Tiler and DrawMapAgg demos, libosmscout-map-agg is missing.")
endif()

if(${OSMSCOUT_BUILD_MAP_CAIRO})
    add_executable(DrawMapCairo src/DrawMapCairo.cpp)
    set_property(TARGET DrawMapCairo PROPERTY CXX_STANDARD 14)
    target_link_libraries(DrawMapCairo osmscout osmscout-map osmscout-map-cairo)
    install(TARGETS DrawMapCairo RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip DrawMapCairo demo, libosmscout-map-cairo is missing.")
endif()

if(${OSMSCOUT_BUILD_MAP_QT})
    add_executable(DrawMapQt src/DrawMapQt.cpp)
    set_property(TARGET DrawMapQt PROPERTY CXX_STANDARD 14)
    target_link_libraries(DrawMapQt osmscout osmscout-map osmscout-map-qt Qt5::Widgets)
    install(TARGETS DrawMapQt RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
    target_compile_definitions(DrawMapQt PRIVATE ${Qt5Widgets_DEFINITIONS})

    add_executable(ResourceConsumptionQt src/ResourceConsumptionQt.cpp)
    set_property(TARGET ResourceConsumptionQt PROPERTY CXX_STANDARD 14)
    target_link_libraries(ResourceConsumptionQt osmscout osmscout-map osmscout-map-qt Qt5::Widgets)
    install(TARGETS ResourceConsumptionQt RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
    target_compile_definitions(ResourceConsumptionQt PRIVATE ${Qt5Widgets_DEFINITIONS})
else()
	message("Skip ResourceConsumptionQt and DrawMapQt demos, libosmscout-map-qt is missing.")
endif()

if(${OSMSCOUT_BUILD_MAP_SVG})
	add_executable(DrawMapSVG src/DrawMapSVG.cpp)
	set_property(TARGET DrawMapSVG PROPERTY CXX_STANDARD 14)
    target_link_libraries(DrawMapSVG osmscout osmscout-map osmscout-map-svg)
	install(TARGETS DrawMapSVG RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip DrawMapSVG demo, libosmscout-map-svg is missing.")
endif()

if(${OSMSCOUT_BUILD_MAP_DIRECTX})
	add_executable(DrawMapDirectX WIN32 src/DrawMapDirectX.cpp)
	set_property(TARGET DrawMapDirectX PROPERTY CXX_STANDARD 14)
	target_link_libraries(DrawMapDirectX osmscout osmscout-map osmscout-map-directx ${Direct2D_LIBRARIES} "Shell32.lib")
	install(TARGETS DrawMapDirectX RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip DrawMapDirectX demo, libosmscout-map-directx is missing.")
endif()

if(${OSMSCOUT_BUILD_MAP_OPENGL} AND ${GLFW_FOUND})
	add_executable(DrawMapOpenGL src/DrawMapOpenGL.cpp)
	set_property(TARGET DrawMapOpenGL PROPERTY CXX_STANDARD 14)
    target_link_libraries(DrawMapOpenGL osmscout osmscout-map osmscout-map-opengl ${GLFW_LIBRARIES})
	install(TARGETS DrawMapOpenGL RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip DrawMapOpenGL demo, libosmscout-map-opengl or glfw is missing.")
endif()

if(${OSMSCOUT_BUILD_MAP_IOSX} AND NOT DEFINED IOS_PLATFORM)
    add_executable(DrawMapOSX src/DrawMapOSX.mm)
    set_property(TARGET DrawMapOSX PROPERTY CXX_STANDARD 14)
    target_link_libraries(DrawMapOSX osmscout osmscout-map osmscout-map-iosx)
    install(TARGETS DrawMapOSX RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
	message("Skip DrawMapOSX demo, libosmscout-map-iosx is missing.")
endif()

if(${LIBXML2_FOUND} AND ${OSMSCOUT_BUILD_GPX})
    #---- GpxPipe
    add_executable(GpxPipe src/GpxPipe.cpp)
    set_property(TARGET GpxPipe PROPERTY CXX_STANDARD 14)
    target_link_libraries(GpxPipe osmscout osmscout-gpx)
    install(TARGETS GpxPipe RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
    message("Skip GpxPipe demo, libxml is missing.")
endif()

if(${LIBXML2_FOUND} AND ${OSMSCOUT_BUILD_GPX})
    #---- ElevationProfile
    add_executable(ElevationProfile src/ElevationProfile.cpp)
    set_property(TARGET ElevationProfile PROPERTY CXX_STANDARD 14)
    target_link_libraries(ElevationProfile osmscout osmscout-map osmscout-gpx)
    install(TARGETS ElevationProfile RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
    message("Skip ElevationProfile demo, libxml is missing.")
endif()

#---- Navigation
add_executable(Navigation src/Navigation.cpp)
set_property(TARGET Navigation PROPERTY CXX_STANDARD 14)
target_link_libraries(Navigation osmscout)
install(TARGETS Navigation RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

#---- NavigationSimulator
add_executable(NavigationSimulator src/NavigationSimulator.cpp)
set_property(TARGET NavigationSimulator PROPERTY CXX_STANDARD 14)
target_link_libraries(NavigationSimulator osmscout osmscout-map)
install(TARGETS NavigationSimulator RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

